<resources>
    <string name="app_name">Pop Picture</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="privacy_policy_url">https://poppicture-57876.firebaseapp.com/privacy-policy.html</string>
    <string name="terms_and_conditions_url">https://poppicture-57876.firebaseapp.com/terms.html</string>
    <string name="github_url">https://github.com/leonardodlana</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Facebook access !-->
    <string name="facebook_application_id" translatable="false">487175738374903</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb487175738374903</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="confirmation_are_you_sure">Are you sure?</string>
    <string name="confirmation_delete">Deleting will erase permanently for you and others</string>
    <string name="confirmation_report">Only report if you think this content is inappropriate. Reporting may result in deletion.</string>

    <string name="thank_for_feedback">Thank you for your feedback!</string>
    <string name="thank_for_usage">Thanks for using my app, i hope you\'re enjoying, if you have any feedback, feel free write a review.</string>
    <string name="photo_deleted">Photo deleted!</string>
    <string name="error_deleting">Error deleting the file</string>
    <string name="error_deleting_description">Sorry, we couldn\'t delete your file, please try again.</string>
    <string name="error_sharing">Error sharing the file</string>
    <string name="error_sharing_description">Sorry, we couldn\'t share your file, please try again.</string>
    <string name="error_browser_not_found">Sorry, we couldn\'t open your browser</string>
    <string name="error_string_empty">This field is required!</string>
    <string name="error_string_not_enough">This field should have at least %d characters</string>
    <string name="error_update_profile">Unable to update profile. Please try again</string>

    <string name="onboarding_presentation">Pop Picture lets you see and share pictures near you or anywhere in the world</string>
    <string name="onboarding_location_and_terms">To be able to precisely show you nearby pictures we need to access your location. By clicking on Agree, you are accepting our <a href="https://poppicture-57876.firebaseapp.com/terms.html">terms</a> and <a href="https://poppicture-57876.firebaseapp.com/privacy-policy.html">privacy policy</a></string>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="welcome">Welcome</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review">Review</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="almost_there_ellipsis">Almost there…</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
    <string name="updated">Updated</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_required">Sign In Required</string>
    <string name="name">Name</string>
    <string name="maybe_later">Maybe later</string>
    <string name="nearby">Nearby</string>
    <string name="hot">Hot</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="learn_more">Learn More</string>
    <string name="sensitive_content">Sensitive Content</string>

    <string name="sign_in_explanation">To be able to share pictures you need to sign in</string>
    <string name="social_publish">We won\'t publish anything on your behalf</string>

    <string name="created_by_author">Created by Leonardo Lana</string>
    <string name="github">GitHub</string>
    <string name="license_for_icons">Some icons were made by Freepik from <a href="http://www.flaticon.com">flaticon.com</a></string>

    <string name="distance_with_km">"%s KM"</string>
    <string name="error_loading">Error loading the file</string>
    <string name="error_loading_description">Sorry, we couldn\'t load your file, please try again.</string>

    <string name="place_holder_title">Title</string>
    <string name="place_holder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id.</string>

    <string name="sensitive_content_snackbar">Beware! The picture you selected might contain sensitive content.</string>
    <string name="sensitive_content_explanation">We might have detected sensitive content on your picture, if true, is likely that the picture will get reports from another user and will be removed. If you\'re sure that there\'s no sensitive content, please ignore this message.</string>
</resources>
