<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <TextView
        android:id="@+id/text_thanks"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/thank_for_usage"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/paragraph_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_app_name" />

    <leonardolana.poppicture.common.ButtonTextView
        android:id="@+id/button_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/review"
        android:textColor="@color/text_link"
        app:layout_constraintTop_toBottomOf="@id/text_thanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <leonardolana.poppicture.common.ButtonTextView
        android:id="@+id/button_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:text="@string/privacy_policy"
        android:textColor="@color/text_link"
        app:layout_constraintTop_toBottomOf="@id/button_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <leonardolana.poppicture.common.ButtonTextView
        android:id="@+id/button_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/text_link"
        app:layout_constraintTop_toBottomOf="@id/button_privacy_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin_half"
        android:text="@string/created_by_author"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/secondary_text"
        app:layout_constraintBottom_toTopOf="@id/button_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/button_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:text="@string/github"
        android:textColor="@color/text_link"
        android:textSize="@dimen/secondary_text"
        app:layout_constraintBottom_toTopOf="@+id/text_icons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/license_for_icons"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>