<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dialog_top_margin"
        android:src="@drawable/ic_camera"
        android:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_title"
        android:layout_alignStart="@+id/text_title"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_presentation"
        android:textColor="@color/normal_text"
        android:textSize="@dimen/paragraph_text" />

    <TextView
        android:id="@+id/text_location_and_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_title"
        android:layout_alignStart="@+id/text_title"
        android:layout_below="@+id/text_description"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_location_and_terms"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/secondary_text" />

    <leonardolana.poppicture.common.ButtonTextView
        android:id="@+id/button_positive"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_min_height"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text_location_and_terms"
        android:layout_marginBottom="@dimen/dialog_bottom_margin"
        android:layout_marginEnd="@dimen/dialog_button_right_margin"
        android:layout_marginTop="16dp"
        android:text="@string/agree"
        android:textAllCaps="true"
        android:textColor="@color/positive_button" />

</RelativeLayout>